<resources>
    <string name="app_name">My Social Media</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myfiles">My Files</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_file_for_upload">Select your file for upload</string>
    <string name="upload_file">Upload File</string>
    <string name="private_file_radio">Private</string>
    <string name="public_file_radio">Public</string>
    <string name="file_description">File Description</string>
    <string name="date_added">Date Added</string>
    <string name="file_name">File Name</string>
    <string name="string_you">You</string>
</resources>
