<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FileUploadActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_file_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group_file_privacy"
            android:layout_centerHorizontal="true"
            android:text="@string/upload_file" />

        <RadioGroup
            android:id="@+id/radio_group_file_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_file_description">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radio_private_file"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/private_file_radio" />

                <RadioButton
                    android:id="@+id/radio_public_file"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/public_file_radio" />


            </LinearLayout>


        </RadioGroup>

        <RelativeLayout
            android:id="@+id/file_upload_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:id="@+id/text_file_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:text="@string/select_your_file_for_upload"
                android:textAllCaps="true"
                android:textSize="8pt"
                android:textStyle="bold" />
        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_file_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_upload_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_file_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/file_description"
            android:textAllCaps="true"
            android:textSize="8pt"
            android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>