<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/actionBarSize"
    app:cardElevation="10dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textSize="6pt"
            android:padding="10dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/download_button"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight=".2"
                android:src="@drawable/ic_file_download" />



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_file_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file_description"
                    android:maxLines="5" />

                <TextView
                    android:id="@+id/text_file_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="5pt"
                    android:text="@string/date_added"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>